linked up weather div

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -28,3 +28,8 @@ tr:hover {
 table {
     border-collapse: separate !important
 }
+
+a {
+    text-decoration: none !important;
+    color: black !important;
+}
